<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcome_back"
        android:text="@string/hi_welcome_back"
        style="@style/TitleTextView.H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/EditTextLabel"
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/til_username"
        app:layout_constraintLeft_toLeftOf="@id/til_username"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="3dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_back"
        android:layout_marginTop="40dp"
        style="@style/Widget.App.TextInputLayoutLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            style="@style/TextInputEditTextLogin"
            android:inputType="text"
            android:hint="@string/enter_your_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/EditTextLabel"
        android:id="@+id/tv_pass_label"
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:layout_constraintLeft_toLeftOf="@id/til_username"
        android:layout_marginTop="12dp"
        android:layout_marginStart="3dp"/>

    <com.google.android.material.textfield.TextInputLayout
        app:endIconMode="password_toggle"
        app:endIconTint="#67686D"
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@id/tv_pass_label"
        android:layout_marginTop="3dp"
        style="@style/Widget.App.TextInputLayoutLogin">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            style="@style/TextInputEditTextLogin"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:textColor="#ECECEC"
        android:id="@+id/cb_remember_me"
        android:text="@string/remember_me"
        android:textSize="15sp"
        android:fontFamily="@font/manrope_semi_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintLeft_toLeftOf="@id/til_password"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="5dp"
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="#E6FFFFFF"
        android:backgroundTint="#0E64D2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/cb_remember_me"
        android:layout_marginHorizontal="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>