<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_server_error"
        android:src="@drawable/img_server_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="150dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/TitleTextView.H1"
        android:text="@string/opps"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_server_error"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_error_description"
        android:text="@string/something_went_wrong"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="#ECECEC"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_try_again"
        android:text="@string/try_again"
        android:fontFamily="@font/poppins_bold"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:backgroundTint="#EB8B19"
        android:layout_width="240dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_error_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>