<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        style="@style/TitleTextView.H2"
        android:text="@string/watch_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_watchlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_empty_watchlist"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/img_empty_watchlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_empty_watchlist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/empty_watchlist_title"
        android:textColor="#EBEBEF"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_empty_watchlist" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_empty_watchlist_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/no_search_results_desc"
        android:textAlignment="center"
        android:textColor="#92929D"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_empty_watchlist_title"
        app:layout_constraintRight_toRightOf="@id/tv_empty_watchlist_title"
        app:layout_constraintTop_toBottomOf="@id/tv_empty_watchlist_title" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/empty_watchlist_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="iv_empty_watchlist, tv_empty_watchlist_title, tv_empty_watchlist_desc"
        />
</androidx.constraintlayout.widget.ConstraintLayout>